--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "@sherenergy/api",
+  "name": "@sharenergy/api",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon --watch 'src/' --exec 'clear && ts-node src/index.ts' -e ts"
+  },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongodb": "^4.1.3",
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "@types/express": "^4.17.13",
+    "nodemon": "^2.0.14",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   }
 }
