--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "snowpack dev"
+  },
   "devDependencies": {
     "@types/react": "^17.0.32",
     "@types/react-router-dom": "^5.3.1",
